--- a/dev_cache/cont2.html
+++ b/dev_cache/cont2.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -12,7 +13,7 @@
 
         <!-- Contact us Form -->
 
-            <div class="container">  
+            <div class="contact_container">  
                 <form id="contact" action="" method="post">
                   <h3>Drop Us a Message</h3>
                   <h4>Stay in touch</h4>
@@ -38,8 +39,10 @@
               </div>
 
         <!---- Location API -->
-        <h3>Meet us at :</h3>
-        <iframe id="gmap" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3780.2762336319724!2d73.75992651398168!3d18.651596287332765!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bc2b9f7ce8bb117%3A0x8f82a5a2976c7c1c!2sTeam+Kratos+Racing!5e0!3m2!1sen!2sde!4v1556384397700!5m2!1sen!2sde" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+        <div class="container">
+          <h3 id="map_title">Meet us at :</h3>
+          <iframe id="gmap" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3780.2762336319724!2d73.75992651398168!3d18.651596287332765!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bc2b9f7ce8bb117%3A0x8f82a5a2976c7c1c!2sTeam+Kratos+Racing!5e0!3m2!1sen!2sde!4v1556384397700!5m2!1sen!2sde" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+        </div>
 </body>
 </html>
 
