--- a/dev_cache/About.html
+++ b/dev_cache/About.html
@@ -12,6 +12,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-3" id="paragraph-one">
+                    <img id="graphic1" src="blue-left-bottom.png" >
                         <p style="text-align: center;">Team Kratos Racing is a Formula student team of Pimpri Chinchwad College of Engineering, comprising of 35 highly dedicated and diligent undergraduate students. Putting in hours at the workshop where sleepless nights and greasy jeans became our daily routine, we design, manufacture and test a Formula 3 styled vehicle. We promote students to hone their skills and execute all tasks to perfection. We exist to race in the top echelon of motor racing starting with national level and then taking India to the world.</p>
                 </div>
                 <div class="col-sm-9" id="image-one">
