--- a/dev_cache/animation.html
+++ b/dev_cache/animation.html
@@ -8,19 +8,25 @@
     <title>Document</title>
     <link rel="stylesheet" href="../lib/css_lib/animate.css"> 
     <link rel="stylesheet" href="../lib/css_lib/hover.css"> 
+    <link rel="stylesheet" href="anime.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
 </head>
 <body>
-    <script src="../lib/js_lib/anime.js"></script>
-    <script>
-    anime({
-        targets: 'h1',
-        translateX: 250,
-        rotate: '1turn',
-        backgroundColor: '#FFF',
-        duration: 800
-      });
-    </script>
-    <h1 class="animated infinite bounce">locate us</h1>
+<div class="box">
+    <div class="graphic1">
+
+    </div>
+    <div class="parent1"></div>
+    <br>
+    <div class="graphic2">
+
+    </div>
+    <div class="parent2"></div>
+    <br>
+    <div class="graphic3">
+
+    </div>
+    <div class="parent3"></div>
+</div>
 </body>
 </html>
