About us - Basic Stricture added

--- a/dev_cache/animation/bs_nav/bs_nav.html
+++ b/dev_cache/animation/bs_nav/bs_nav.html
@@ -27,7 +27,7 @@
                     <li class="nav-item active">
                       <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                     </li>
-                    <li class="nav-item-sucess">
+                    <li class="nav-item sucess">
                       <a class="nav-link" href="#">About us</a>
                     </li>
 
@@ -51,25 +51,23 @@
                       <a class="nav-link" href="#">Newswire</a>
                     </li>
 
-                    <li class="nav-item">
-                            <a class="nav-link" href="#">Event Reports</a>
-                    </li>
+                    <div class="dropdown">
+                            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                              Event Reports
+                            </button>
+                            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                              <a class="dropdown-item" href="#">Formula Bharat 2018</a>
+                              <a class="dropdown-item" href="#">SAE Supra 2018</a>
+                              <a class="dropdown-item" href="#">Formula Bharat 2019</a>
+                            </div>
+                    </div>
 
 
                     <li class="nav-item">
                       <a class="nav-link" href="#">Sponsers</a>
                     </li>
 
-                    <div class="dropdown">
-                            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                              Dropdown button
-                            </button>
-                            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                              <a class="dropdown-item" href="#">Action</a>
-                              <a class="dropdown-item" href="#">Another action</a>
-                              <a class="dropdown-item" href="#">Something else here</a>
-                            </div>
-                    </div>
+
 
                     <li class="nav-item">
                       <a class="nav-link" href="#">Contact us</a>
