Cards Model With JSON - dept.json created

--- a/Workshop/Teammates_Cards/index2.html
+++ b/Workshop/Teammates_Cards/index2.html
@@ -9,6 +9,7 @@
 <body>
     <script src="list.js"></script>
     <div id="animal-info"></div>
-    <button id="btn" onclick="call()" >get Data</button>
+    <button id="btn">get Data</button>
 </body>
 </html>
+
