Data tabulation Done

--- a/Workshop/Teammates_Cards/index2.html
+++ b/Workshop/Teammates_Cards/index2.html
@@ -5,11 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <style>
+        tr:nth-child(odd){
+            background-color: rgb(190, 190, 190);
+        }
+    </style>
 </head>
 <body>
     <script src="list.js"></script>
     <div id="animal-info"></div>
     <button id="btn">get Data</button>
+    <div id="op"></div>
 </body>
 </html>
+
+
 
