--- a/Workshop/Teammates_Cards/index2.html
+++ b/Workshop/Teammates_Cards/index2.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="style_card.css">
     <title>Document</title>
     <style>
         tr:nth-child(odd){
@@ -16,6 +21,7 @@
     <div id="animal-info"></div>
     <button id="btn">get Data</button>
     <div id="op"></div>
+    <img src="../../images/our team/" alt="">
 </body>
 </html>
 
