--- a/Workshop/Teammates_Cards/index2.html
+++ b/Workshop/Teammates_Cards/index2.html
@@ -17,13 +17,16 @@
     </style>
 </head>
 <body>
-    <script src="list.js"></script>
+    
     <div id="animal-info"></div>
     <button id="btn">get Data</button>
     <div id="op"></div>
-    <img src="../../images/our team/" alt="">
+    <section id="team" class="pb-5">
+            <div class="container" id="whole">
+                
+            </div>
+    </section>
+    <script src="list.js"></script>
 </body>
 </html>
-
-
 
