--- a/formula-bharat-2019/index.html
+++ b/formula-bharat-2019/index.html
@@ -202,6 +202,7 @@
                         Energy Efficiency- 1st
                     </span>
                             
+                </div>
             </div>
             <div class="line">
                     <div>
@@ -241,6 +242,7 @@
             <img src="img/victory/car-img.jpeg" class='paralax' alt="">
             <img src="img/victory/team2.jpeg">
 
+        </div>
         </div>
         </div>
     </div>
