Our Cars JSON Creation

--- a/Workshop/paralax/index.html
+++ b/Workshop/paralax/index.html
@@ -8,7 +8,7 @@
     <style>
         .parallax {
           /* The image used */
-          background-image: url("../../../images/team-kratos-at-formulabharat.jpg");
+          background-image: url("fireblade-3.0.jpeg"),linear-gradient(black,white);
         
           /* Set a specific height */
           height: 500px;
