Our Team Page Linkings

--- a/newswire.html
+++ b/newswire.html
@@ -9,43 +9,44 @@
     <link rel="stylesheet" href="css/newswire/newswire_desktop.css">
 </head>
 <body>
+<div class="container">
     <h3 class="newswire_title">Newswire :</h3>
 
 <div class="card-deck">
-    <div class="card" style="width: 18rem;">
+    <div class="card" >
             <img class="card-img-top" src="images/newswire/Autocar_professional.png" alt="Autocar_professional.png">
     </div>
-    <div class="card" style="width: 18rem;">
+    <div class="card" >
             <img class="card-img-top" src="images/newswire/business-std.jpeg" alt="business-std.jpeg">
     </div>
-    <div class="card" style="width: 18rem;">
+    <div class="card" >
             <img class="card-img-top" src="images/newswire/essel.jpeg" alt="essel.jpeg">
     </div>
 </div>
  
 <div class="card-deck">
-    <div class="card" style="width: 18rem;">
+    <div class="card" >
             <img class="card-img-top" src="images/newswire/indian-cars.jpeg" alt="indian-cars.jpeg">
     </div>
-    <div class="card" style="width: 18rem;">
+    <div class="card" >
             <img class="card-img-top" src="images/newswire/liscence_of_drive.jpeg" alt="liscence_of_drive.jpeg">
     </div>
-    <div class="card" style="width: 18rem;">
+    <div class="card" >
             <img class="card-img-top" src="images/newswire/motown.jpeg" alt="motown.jpeg">
     </div>
 </div>
 
 <div class="card-deck">
-    <div class="card" style="width: 18rem;">
+    <div class="card" >
             <img class="card-img-top" src="images/newswire/podium-finish.jpeg" alt="podium-finish.jpeg">
     </div>
-    <div class="card" style="width: 18rem;">
+    <div class="card" >
             <img class="card-img-top" src="images/newswire/united-news.jpeg" alt="united-news.jpeg">
     </div>
-    <div class="card" style="width: 18rem;">
+    <div class="card" >
             <img class="card-img-top" src="images/newswire/webinidia.jpeg" alt="webinidia.jpeg">
     </div>
 </div>
-
+</div>
 </body>
 </html>
