Our Team Folder Codecleaned from Workshop

--- a/our-team.html
+++ b/our-team.html
@@ -60,7 +60,7 @@
                 </li>
     
                 <li class="nav-item">
-                    <a class="nav-link" href="#Ground-Low-Voltage-and-Data-Aquisitions">Ground Low Voltage System<br>and Data Aquisition System</a>
+                    <a class="nav-link" href="#Ground-Low Voltage and Data Aquisitions">Ground Low Voltage System<br>and Data Aquisition System</a>
                 </li>
     
                 <li class="nav-item">
