Text On Image Successful

--- a/about-us.html
+++ b/about-us.html
@@ -7,8 +7,7 @@
     <title>About us</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/4.2.1/materia/bootstrap.min.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
-    <link rel="stylesheet" href="navbar-fixed-right.min.css">
-    <link rel="stylesheet" href="navbar-fixed-left.min.css">
+
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
     integrity="sha256-k2WSCIexGzOj3Euiig+TlR8gA0EmPjuc79OEeY5L45g=" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.2.1/js/bootstrap.js"></script>
@@ -25,7 +24,9 @@
             <div class="col-sm-7">
                 <img src="images/about-us/team-kratos-racing-whole-team-p1.jpg" alt="Whole Team" class="img-fluid">
             </div>
+
         </div>
+
         <hr/>
                <!----Row 2 : Paragraph 2 -->
 
@@ -38,22 +39,15 @@
             </div>
         </div>
         <hr/>
-       <!----Row 3 : full Screen Image -->
+       <!----Row 3 : full Screen Image with Quote On It -->
 
-       <div class="row text-center img3 align-items-center">
-            <div class="col-sm-12 img_div">
-                    <img src="images/about-us/thunderblade-in-race.jpg" alt="Whole Team" class="img-fluid">
+       <div class="parallax">
+            <img src="images/about-us/thunderblade-in-race.jpg" alt="Whole Team" class="img-fluid">
+            <div class="row text-center bg-dark onimage">
+                <h3 class="quote statement color-white">“WE DIDN’T KNOW IT WAS IMPOSSIBLE, SO WE DID IT”.</h3>
             </div>
-       </div>
-       <hr/>
-       <!----Row 4 : Quote -->
+        </div><hr/>
 
-       <div class="row text-center align-items-center">
-        <div class="col-sm-12 quote_bg">
-            <h3 class="quote statement">“WE DIDN’T KNOW IT WAS IMPOSSIBLE, SO WE DID IT”.</h3>
-        </div>
-       </div>
-       <hr/>
        <!----Row 5 : Quote -->
 
        <div class="row text-center img align-items-center">
