--- a/newswire.html
+++ b/newswire.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>NewsWire</title>
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
+    <link href="lib/css_lib/bootsrap.css" rel="stylesheet">
     <link rel="stylesheet" href="css/newswire/newswire_desktop.css">
 </head>
 <body>
@@ -13,9 +13,17 @@
     <h3 class="newswire_title">Newswire :</h3>
 
 <div class="card-deck">
-    <div class="card" >
+        
+        <div class="card" >
             <img class="card-img-top" src="images/newswire/Autocar_professional.png" alt="Autocar_professional.png">
-    </div>
+        <h2 class="card-title text-center sucess">
+                        <a href="https://punemirror.indiatimes.com/others/sunday-read/podium-finish/articleshow/60135468.cms">
+                        Go to Website
+                        </a>
+        </h2>
+     
+        </div>
+        </a>
     <div class="card" >
             <img class="card-img-top" src="images/newswire/business-std.jpeg" alt="business-std.jpeg">
     </div>
@@ -48,5 +56,17 @@
     </div>
 </div>
 </div>
+
+<h2>Image Links</h2>
+
+<p>The image is a link. You can click on it.</p>
+
+<a href="google.com">
+  <img src="images/logos/logo_black.png" alt="HTML tutorial" style="width:42px;height:42px;border:0">
+</a>
+
+<p>We have added "border:0" to prevent IE9 (and earlier) from displaying a border around the image.</p>
+
+
 </body>
 </html>
