Text On Image Successful all Quotes Done

--- a/about-us.html
+++ b/about-us.html
@@ -61,8 +61,11 @@
        <hr/>
         <!----Row 6 : Quote -->
 
-        <div class="row text-center quote_bg img1 align-items-center">
-                <h3 class="quote statement">Keeping up with the legacy that our mentors started we are on a quest of becoming the epitome of hard work , team spirit  and FORMULA STUDENT SUCCESS.</h3>
+        <div class="parallax">
+            <img src="images/about-us/last-quote.jpg" alt="Whole Team" class="img-fluid">
+            <div class="row text-center bg-dark onimage">
+                <h3 class="quote statement color-white">Keeping up with the legacy that our mentors started we are on a quest of becoming the epitome of hard work , team spirit  and FORMULA STUDENT SUCCESS.</h3>
+            </div>
         </div>
 
 </div></body>
