Done With About-us Page

--- a/about-us.html
+++ b/about-us.html
@@ -18,7 +18,9 @@
         <div class="row align-items-center img1">
             <div class="col-sm-5 p1 vcenter">
  
-                <p>Team Kratos Racing is a Formula student team of PCCOE, comprising of 35 highly dedicated and diligent undergraduate students. Putting in hours at the workshop where sleepless nights and greasy jeans became our daily routine, we design, manufacture and test a Formula 3 styled vehicle. We promote students to hone their skills and execute all tasks to perfection. We exist to race in the top echelon of motor racing starting with national level and then taking India to the world.</p>
+                <p>
+                &nbsp    &nbsp   &nbsp   &nbsp    
+                Team Kratos Racing is a Formula student team of PCCOE, comprising of 35 highly dedicated and diligent undergraduate students. Putting in hours at the workshop where sleepless nights and greasy jeans became our daily routine, we design, manufacture and test a Formula 3 styled vehicle. We promote students to hone their skills and execute all tasks to perfection. We exist to race in the top echelon of motor racing starting with national level and then taking India to the world.</p>
             
             </div>
             <div class="col-sm-7">
@@ -35,7 +37,9 @@
                 <img src="images/about-us/Team-kratos-Thunderblade.jpg" alt="Whole Team" class="img-fluid">
             </div>
             <div class="col-sm-4 p2">
-                <p>Driven by our motto, “TOGETHER WE RISE”,  we have successfully manufactured 3 combustion Formula-3 cars in 3 years. The genesis of the adventure began when a few passionate minds from the college set out on this journey of forming a Formula Student team. Holding spanners in their hands, chains round their neck, innovation in their minds and determination in their heart, they set out on the journey to achieve the impossible.</p>
+                <p>
+                        &nbsp    &nbsp   &nbsp   &nbsp 
+                    Driven by our motto, “TOGETHER WE RISE”,  we have successfully manufactured 3 combustion Formula-3 cars in 3 years. The genesis of the adventure began when a few passionate minds from the college set out on this journey of forming a Formula Student team. Holding spanners in their hands, chains round their neck, innovation in their minds and determination in their heart, they set out on the journey to achieve the impossible.</p>
             </div>
         </div>
         <hr/>
