Blanked -> Homepage , Contact us

--- a/Workshop/googleAPI/demo.html
+++ b/Workshop/googleAPI/demo.html
@@ -7,6 +7,6 @@
     <title>Google Rest API</title>
 </head>
 <body>
-    
+    <iframe src="https://www.instagram.com/team_kratos/" frameborder="0"></iframe>
 </body>
 </html>
