--- a/laurels.html
+++ b/laurels.html
@@ -6,10 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>About us</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/4.2.1/materia/bootstrap.min.css"/>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/laurels/bootstrap_larels.css">
     <link rel="stylesheet" href="lib/css_lib/hover.css">
-<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.2.1/js/bootstrap.js"></script>
     <link rel="stylesheet" href="css/laurels/laurel_css.css">
 
 </head>
@@ -18,6 +18,14 @@
     <div class="container">
 
         <!----Car 1 -->
+
+        <div class="container2">
+            <img src="images/laurels/fake/maya (1).jpg" alt="Notebook" style="width:100%;">
+            <div class="content">
+              <h1>Heading</h1>
+              <p>Lorem ipsum..</p>
+            </div>
+        </div>
 
         <div class="row">
                 <h2 class="comp_name">FORMULA BHARAT ELECTRIC 2019</h2>
