theme for FB19 Ready for Deployemeny

--- a/Workshop/cars_pre/index.html
+++ b/Workshop/cars_pre/index.html
@@ -40,13 +40,13 @@
 		}(document, 'script', 'facebook-jssdk'));</script>
 		
 		
-		<noscript>
+				<noscript>
             <div class="no-js-warning">This site is better with JavaScript turned on!</div>
         </noscript>
         
 		
 			
-		<!--	 FRONT 
+			 <!-- FRONT -->
 			<div class="page front-page" data-0="z-index: 1; position: fixed; top: 0; left: 0; bottom: 0; left: 0; margin: auto; height: 100%; width: 100%; " data-800="z-index: 0;">
 				<div class="container">
 					<div class="brand">
@@ -70,7 +70,7 @@
 					<div class="scroll-arrow" data-7000="opacity: 1;" data-8000="opacity: 0;"></div>
 				</div>
 			</div>
-			-->
+
         	
         	<div class="decades" data-800="position: fixed; top: 100%; width: 100%; height: 100%;" data-1000="top: 0%; ">
         		<section id="decade2010" class="page decade decade2010" data-nav="2010" data-0="top: 0%;">
