Footer Work Don

--- a/footer.html
+++ b/footer.html
@@ -1,12 +1,16 @@
 <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/all.js" integrity="sha384-xymdQtn1n3lH2wcu0qhcdaOpQwyoarkgLVxC/wZ5q7h9gHtxICrpcaSUfygqZGOe" crossorigin="anonymous"></script>
-
+<link rel="stylesheet" href="css/footer/foot_css.css">
 
 <footer>
-  <div class="rounded-social-buttons">
+  <div class="rounded-social-buttons" style="float: left">
                     <a class="social-button facebook" href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-f"></i></a>
                     <a class="social-button twitter" href="https://www.twitter.com/" target="_blank"><i class="fab fa-twitter"></i></a>
                     <a class="social-button linkedin" href="https://www.linkedin.com/" target="_blank"><i class="fab fa-linkedin"></i></a>
                     <a class="social-button youtube" href="https://www.youtube.com/" target="_blank"><i class="fab fa-youtube"></i></a>
                     <a class="social-button instagram" href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
+  </div>
+  <div style="float: right">
+    <a href="marketing@kratosracing.com"><span class="fontware">marketing@kratosracing.com</span></a><br>
+    <p>&copy <span class="fontware">Kratos Racing 2019</span> All Rights Reserved.</p>
   </div>
 </footer>
