Images Added to Directory

--- a/our-cars.html
+++ b/our-cars.html
@@ -10,12 +10,15 @@
 <body>
     <div class="bigbox">
     <div class="optionbox">
-        <div>Fireblade 4.0</div>
-        <div>Fireblade 3.1</div>
-        <div>Fireblade 3.0</div>
-        <div>Fireblade 2.1</div>
-        <div>Fireblade 2.0</div>
-        <div>Fireblade 1.0</div>
+    <center>
+        <button onclick="printName(40)"><div id="40">Fireblade 4.0</div></button>
+
+        <button onclick="printName(31)"><div id="31">Fireblade 3.1</div></button>
+        <button onclick="printName(30)"><div id="30">Fireblade 3.0</div></button>
+        <button onclick="printName(21)"><div id="21">Fireblade 2.1</div></button>
+        <button onclick="printName(20)"><div id="20">Fireblade 2.0</div></button>
+        <button onclick="printName(10)"><div id="10">Fireblade 1.0</div></button>
+    </center>
     </div>
     <hr>
     <div class="framebox">
@@ -23,5 +26,8 @@
     </div> 
 </div>
 <script src="js/our_cars_iframe.js"></script>
+<script>
+
+</script>
 </body>
 </html>
