--- a/ourCars/Fireblade1.0.html
+++ b/ourCars/Fireblade1.0.html
@@ -7,10 +7,13 @@
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="cars_comman_style.css">
 </head>
 <body>
 
     <!-- image of the Car -->
+
+    <h2>FireBlade 1.0</h2>
 
     <img class='img img-fluid' src="" alt="">
     <hr>
@@ -28,10 +31,10 @@
                     <td>1610mm</td>
                 </tr>
                 <tr>
-                        <td>Wheel Track</td>
-                        <td>1320 mm (front)<br>
-                            1310 mm(rear)
-                        </td>
+                    <td>Wheel Track</td>
+                    <td>1320 mm (front)<br>
+                        1310 mm(rear)
+                    </td>
                 </tr>
                 <tr>
                     <td>Mass of Vehicle</td>
