--- a/ourCars/Fireblade2.1.html
+++ b/ourCars/Fireblade2.1.html
@@ -7,11 +7,12 @@
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="cars_comman_style.css">
 </head>
 <body>
 
     <!-- image of the Car -->
-
+    <h2>FireBlade 2.1</h2>
     <img class='img img-fluid' src="" alt="">
     <hr>
 
