Our Cars JS Working All Set

--- a/our-cars.html
+++ b/our-cars.html
@@ -22,7 +22,7 @@
     </div>
     <hr>
     <div class="framebox">
-        <iframe id="our-cars-iframe" src="ourCars/Fireblade4.0.html" frameborder="0"></iframe>
+        <iframe id="our-cars-iframe" src="ourCars/Fireblade4.0.html" scrolling="no" frameborder="0"></iframe>
     </div> 
 </div>
 <script src="js/our_cars_iframe.js"></script>
