--- a/ourCars/Fireblade1.0.html
+++ b/ourCars/Fireblade1.0.html
@@ -12,12 +12,12 @@
 <body>
 
     <!-- image of the Car -->
-
+<center>
     <h2>FireBlade 1.0</h2>
 
-    <img class='img img-fluid' src="" alt="">
+    <img class='img img-fluid' src="../images/our-cars/Cars/fireblade-1.0.jpg" alt="fireblade-1.0">
     <hr>
-
+</center>
     <!--- Technical Details -->
     
     <!--- Dimensions -->
