--- a/ourCars/Fireblade4.0.html
+++ b/ourCars/Fireblade4.0.html
@@ -10,12 +10,12 @@
     <link rel="stylesheet" href="cars_comman_style.css">
 </head>
 <body>
-
+    <center>
     <!-- image of the Car -->
     <h2>FireBlade 4.0</h2>
-    <img class='img img-fluid' src="" alt="">
+    <img class='img img-fluid' src="../images/our-cars/Cars/Fireblade-4.0.jpg" alt="FireBlade 4.0">
     <hr>
-
+    </center>
     <!--- Technical Details -->
     
     <!--- Dimensions -->
