--- a/ourCars/fireblade2.0.html
+++ b/ourCars/fireblade2.0.html
@@ -10,12 +10,12 @@
     <link rel="stylesheet" href="cars_comman_style.css">
 </head>
 <body>
-
+<center>
     <!-- image of the Car -->
     <h2>FireBlade 2.0</h2>
-    <img class='img img-fluid' src="" alt="">
+    <img class='img img-fluid' src="../images/our-cars/Cars/fireblade-2.0-1.jpg" alt="FireBlade 2.0">
     <hr>
-
+</center>
     <!--- Technical Details -->
     
     <!--- Dimensions -->
