--- a/ourCars/Fireblade3.1.html
+++ b/ourCars/Fireblade3.1.html
@@ -19,7 +19,7 @@
     <!--- Technical Details -->
     
     <!--- Dimensions -->
-
+    <hr>
     <h4>Dimensions :</h4>
     <div class="row">
         <div class="col-sm-8 col-lg-8">
@@ -49,7 +49,7 @@
         </div>
 
     </div>
-
+    <hr>
     <!--- Suspension Parameters -->
 
     <h4>Suspension Parameters :</h4>
@@ -81,7 +81,7 @@
             <img src="" alt="">
         </div>
     </div>
-
+    <hr>
     <!--- BRAKES SYSTEM -->
 
     <h4>Brakes System :</h4>
@@ -116,7 +116,7 @@
             <img src="" alt="">
         </div>
     </div>
-    
+    <hr>
 
     <!--- ERGONOMICS -->
 
@@ -134,7 +134,7 @@
             <img src="" alt="">
         </div>
     </div>
-
+    <hr>
     <!--- FRAME -->
 
     <h4>Frame :</h4>
@@ -155,7 +155,7 @@
             <img src="" alt="">
         </div>
     </div>
-
+    <hr>
 
     <!--- Powertrain -->
 
@@ -219,7 +219,7 @@
         </div>
     </div>
 
-
+    <hr>
     <!--- Drivertrain -->
 
     <h4>Powertrain :</h4>
@@ -255,7 +255,7 @@
             <img src="" alt="">
         </div>
     </div>
-
+    <hr>
     <!--- Aerodynamics -->
 
     <h4>Aerodynamics :</h4>
@@ -272,7 +272,7 @@
             <img src="" alt="">
         </div>
     </div>
-
+    <hr>
         <!--- DAQ -->
 
         <h4>Data Aquisition System :</h4>
@@ -296,7 +296,7 @@
             </div>
         </div>
 
-         <!--- Others -->
+        <hr>   <!--- Others -->
 
          <h4>Other :</h4>
          <div class="row">
