--- a/Workshop/load/index.html
+++ b/Workshop/load/index.html
@@ -16,5 +16,16 @@
       </div>
       </a>
     </div>
+
+    <div class="col-xs-6 col-sm-6 col-md-3 foading">
+      <a href="`+website+`">
+      <div class="bard">
+          <img class="card-img-top img-fluid" src="../../images/sponsers/Title/BOSCH-1-150x150.jpeg" ` + `alt="`+ company +`">
+          <div class="card-body">
+              <h3>Align PArt 2</h3>
+          </div>
+      </div>
+      </a>
+    </div>
   </body>
 </html>
